--- a/src/query/storages/common/index/Cargo.toml
+++ b/src/query/storages/common/index/Cargo.toml
@@ -24,6 +24,7 @@ databend-storages-common-table-meta = { path = "../table_meta" }
 
 anyerror = { workspace = true }
 cbordata = { version = "0.6.0" }
+log = { workspace = true }
 match-template = { workspace = true }
 minitrace = { workspace = true }
 serde = { workspace = true }
