--- a/src/query/storages/common/table_meta/Cargo.toml
+++ b/src/query/storages/common/table_meta/Cargo.toml
@@ -21,6 +21,7 @@ chrono = { workspace = true }
 enum-as-inner = "0.5"
 futures = { workspace = true }
 futures-util = { workspace = true }
+rand = "0.8.3"
 rmp-serde = "1.1.1"
 serde = { workspace = true }
 serde_json = { workspace = true }
